<resources>
    <string name="app_name">SubmissionAplikasiMovieCatalogue</string>
    <string name="app_bar_home">Movie Catalogue</string>
    <string name="app_bar_detail">Movie Detail</string>
    <string name="todo">TODO</string>
    <string name="description_movie">Description Movie</string>
    <string name="title_detail">Title Detail</string>
    <string name="overview">Overview</string>
    <string name="isi_overview">Content Overview</string>
    <string name="content_release">Content Release Information</string>
    <string name="genres">Genres</string>
    <string name="release_information">Release Information</string>
    <string name="runtime">Runtime</string>
    <string name="content_runtime">Content Runtime</string>
    <string name="content_genres">Content Genres</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">Tv Show</string>
    <string name="title_movie">Title Movie</string>
    <string-array name="data_title">
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Venom</item>
        <item>Robin Hood</item>
        <item>Bird Box</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>The Mule</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
    </string-array>
    <string-array name="data_date">
        <item>December 21, 2018</item>
        <item>April 23, 2018</item>
        <item>October 1, 2018</item>
        <item>November 21, 2018</item>
        <item>November 12, 2018</item>
        <item>January 18, 2019</item>
        <item>October 26, 2018</item>
        <item>December 10, 2018</item>
        <item>December 21, 2018</item>
        <item>November 14, 2018</item>
    </string-array>
    <string-array name="data_genres">
        <item>Action, Adventure, Fantasy</item>
        <item>Adventure, Action, Science Fiction</item>
        <item>Science Fiction, Action</item>
        <item>Adventure, Action, Thriller</item>
        <item>Thriller, Drama</item>
        <item>Thriller, Drama, Science Fiction</item>
        <item>Action, Thriller</item>
        <item>CrimeDrama, Thriller</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Drama</item>
    </string-array>
    <string-array name="data_runtime">
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>1h 52m</item>
        <item>1h 56m</item>
        <item>2h 4m</item>
        <item>2h 9m</item>
        <item>2h 2m</item>
        <item>1h 57m</item>
        <item>1h 54m</item>
        <item>2h 10m</item>
    </string-array>
    <string-array name="data_description">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup detat is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>Earl Stone, a man in his eighties, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, hes just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life.</item>
    </string-array>
    <string-array name="data_title_tv_show">
        <item>The Simpsons</item>
        <item>Arrow</item>
        <item>Riverdale</item>
        <item>The Flash</item>
        <item>Family Guy</item>
        <item>NCIS</item>
        <item>Gotham</item>
        <item>Dragon Ball</item>
        <item>Doom Patrol</item>
        <item>Iron Fist</item>
    </string-array>
    <string-array name="data_date_tv_show">
        <item>December 17, 1989</item>
        <item>October 10, 2012</item>
        <item>January 26, 2017</item>
        <item>October 7, 2014</item>
        <item>January 31, 1999</item>
        <item>September 23, 2003</item>
        <item>September 22, 2014</item>
        <item>February 26, 1986</item>
        <item>February 15, 2019</item>
        <item>March 17, 2017</item>
    </string-array>
    <string-array name="data_genres_tv_show">
        <item>Animation, Comedy</item>
        <item>Crime, Drama, Mystery, Action, Adventure</item>
        <item>Drama, Mystery</item>
        <item>DramaSci-Fi, Fantasy</item>
        <item>Animation, Comedy</item>
        <item>Action, Adventure, Crime, Drama</item>
        <item>Drama, Fantasy, Crime</item>
        <item>ComedySci-Fi, Fantasy, Animation, Action, Adventure</item>
        <item>Sci-Fi, Fantasy, Action, Adventure</item>
        <item>Action, Adventure, Drama, Sci-Fi, Fantasy</item>
    </string-array>
    <string-array name="data_runtime_tv_show">
        <item>22m</item>
        <item>42m</item>
        <item>45m</item>
        <item>44m</item>
        <item>22m</item>
        <item>45m</item>
        <item>43m, 60m</item>
        <item>25m</item>
        <item>60m</item>
        <item>55m</item>
    </string-array>
    <string-array name="data_description_tv_show">
        <item>Set in Springfield, the average American town, the show focuses on the antics and everyday adventures of the Simpson family; Homer, Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. Since the beginning, the series has been a pop culture icon, attracting hundreds of celebrities to guest star. The show has also made name for itself in its fearless satirical take on politics, media and American life in general</item>
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow</item>
        <item>Set in the present, the series offers a bold, subversive take on Archie, Betty, Veronica and their friends, exploring the surreality of small-town life, the darkness and weirdness bubbling beneath Riverdale wholesome facade.</item>
        <item>After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel. Though initially excited by his newfound powers, Barry is shocked to discover he is not the only "meta-human" who was created in the wake of the accelerator explosion — and not everyone is using their new powers for good. Barry partners with S.T.A.R. Labs and dedicates his life to protect the innocent. For now, only a few close friends and associates know that Barry is literally the fastest man alive, but it wont be long before the world learns what Barry Allen has become The Flash</item>
        <item>Sick, twisted, politically incorrect and Freakin Sweet animated series featuring the adventures of the dysfunctional Griffin family. Bumbling Peter and long-suffering Lois have three kids. Stewie (a brilliant but sadistic baby bent on killing his mother and taking over the world), Meg (the oldest, and is the most unpopular girl in town) and Chris (the middle kid, hes not very bright but has a passion for movies). The final member of the family is Brian - a talking dog and much more than a pet, he keeps Stewie in check whilst sipping Martinis and sorting through his own life issues.</item>
        <item>From murder and espionage to terrorism and stolen submarines, a team of special agents investigates any crime that has a shred of evidence connected to Navy and Marine Corps personnel, regardless of rank or position</item>
        <item>Everyone knows the name Commissioner Gordon. He is one of the crime worlds greatest foes, a man whose reputation is synonymous with law and order. But what is known of Gordons story and his rise from rookie detective to Police Commissioner? What did it take to navigate the multiple layers of corruption that secretly ruled Gotham City, the spawning ground of the worlds most iconic villains? And what circumstances created them – the larger-than-life personas who would become Catwoman, The Penguin, The Riddler, Two-Face and The Joker? </item>
        <item>Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his own, but easily managed. Then one day, Goku met a teenage girl named Bulma, whose search for the mystical Dragon Balls brought her to Gokus home. Together, they set off to find all seven and to grant her wish.</item>
        <item>The Doom Patrol’s members each suffered horrible accidents that gave them superhuman abilities — but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence — and to protect Earth from what they find.</item>
        <item>Danny Rand resurfaces 15 years after being presumed dead. Now, with the power of the Iron Fist, he seeks to reclaim his past and fulfill his destiny.</item>
    </string-array>
    <string-array name="data_image_tv_show">
        <item>@drawable/poster_the_simpson</item>
        <item>@drawable/poster_arrow</item>
        <item>@drawable/poster_riverdale</item>
        <item>@drawable/poster_the_flash</item>
        <item>@drawable/poster_family_guy</item>
        <item>@drawable/poster_ncis</item>
        <item>@drawable/poster_gotham</item>
        <item>@drawable/poster_dragon_ball</item>
        <item>@drawable/poster_doom_patrol</item>
        <item>@drawable/poster_iron_fist</item>
    </string-array>
</resources>